--- a/Projekt/app/build.gradle
+++ b/Projekt/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.android.support:design:22.2.1'
     compile 'com.google.android.gms:play-services:8.3.0'
+    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
 }
