--- a/Projekt/app/src/main/AndroidManifest.xml
+++ b/Projekt/app/src/main/AndroidManifest.xml
@@ -6,7 +6,10 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="20" />
     <!-- Permission for using NFC hardware -->
-    <!--<uses-permission android:name="android.permission.NFC" />-->
+    <uses-permission android:name="android.permission.NFC"/>
+    <!-- Forcing device to have NFC hardware -->
+    <uses-feature android:name="android.hardware.nfc" android:required="true"/>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
