--- a/Projekt/app/src/main/AndroidManifest.xml
+++ b/Projekt/app/src/main/AndroidManifest.xml
@@ -61,7 +61,9 @@
         </activity>
         <activity
             android:name=".NewActivity"
-            android:label="mTRIAGE" >
+            android:label="mTRIAGE"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.nfc.action.TAG_DISCOVERED" />
 
