--- a/Projekt/app/src/main/AndroidManifest.xml
+++ b/Projekt/app/src/main/AndroidManifest.xml
@@ -6,27 +6,35 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="20" />
     <!-- Permission for using NFC hardware -->
+
     <uses-permission android:name="android.permission.NFC"/>
+
+
     <!-- Forcing device to have NFC hardware -->
-    <uses-feature android:name="android.hardware.nfc" android:required="true"/>
+    <uses-feature android:name="android.hardware.nfc" android:required="false"/>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+
+
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
     <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 
-    <!--
-     To retrieve OAuth 2.0 tokens or invalidate tokens to disconnect a user. This disconnect
-     option is required to comply with the Google+ Sign-In developer policies
-    -->
-    <uses-permission android:name="android.permission.USE_CREDENTIALS" /> <!-- To retrieve the account name (email) as part of sign-in: -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" /> <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
-    <uses-permission android:name="ANDROID.PERMISSION.CAMERA"/>
+    <uses-permission android:name="ANDROID.PERMISSION.CAMERA" />
+
+
+
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+
 
 
     <application
@@ -43,7 +51,9 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
         </activity>
         <activity
@@ -62,6 +72,7 @@
         <activity
             android:name=".NewActivity"
             android:label="mTRIAGE"
+            android:theme="@style/AppThemeNew"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
